# deepnotes

./: .env.example  .gitignore  DeepNotes.sln  Directory.Build.props  LICENSE  MANIFEST.in  README.md  config.example.yml  config.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.run/: engine.run.xml
DeepNotes.API/: DeepNotes.API.csproj  Program.cs  appsettings.json
DeepNotes.API/Controllers/: DocumentsController.cs
DeepNotes.API/Models/: DocumentModels.cs
DeepNotes.Core/: DeepNotes.Core.csproj
DeepNotes.Core/Interfaces/: IDocumentLoader.cs  IDocumentRepository.cs  IKnowledgeGraphMerger.cs  IKnowledgeGraphProcessor.cs  IKnowledgeGraphService.cs  IKnowledgeGraphStorage.cs
DeepNotes.Core/Models/: Document.cs  DocumentMetadata.cs  Entity.cs  Relationship.cs
DeepNotes.DataLoaders/: BaseDocumentLoader.cs  DeepNotes.DataLoaders.csproj  FileDocumentLoader.cs  WebDocumentLoader.cs
DeepNotes.DataLoaders/FileHandlers/: ExcelFileHandler.cs  IFileTypeHandler.cs  OfficeFileHandlerBase.cs  PdfFileHandler.cs  PowerPointFileHandler.cs  TextFileHandler.cs  WordFileHandler.cs
DeepNotes.DataLoaders/Utils/: DocumentChunker.cs  TextChunker.cs
DeepNotes.Database/: DeepNotes.Database.csproj
DeepNotes.Database/SqlServer/: DeepNotesDbContext.cs  SqlDocumentRepository.cs
DeepNotes.LLM/: DeepNotes.LLM.csproj  LLMService.cs
DeepNotes.LLM/Models/: LLMResponse.cs  StructuredLLMResponse.cs
DeepNotes.Tests/: DeepNotes.Tests.csproj
DeepNotes.Tests/DocumentLoaders/: ExcelFileHandlerTests.cs  FileDocumentLoaderTests.cs  PdfFileHandlerTests.cs  PowerPointFileHandlerTests.cs  TextChunkerTests.cs  TextFileHandlerTests.cs  WebDocumentLoaderTests.cs  WordFileHandlerTests.cs
DeepNotes.Tests/LLM/: LLMServiceTests.cs
deepnotes/: __init__.py  config.py  engine.py  main.py  models.py
deepnotes/agents/: analysis_agents.py  core_agents.py  data_agents.py
deepnotes/config/: autogen_config.yml  (+1 more)
tests/: conftest.py  test_config.yml  test_integration.py  test_web_document_loader.py
(+38 files in other folders)
